// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Correctly - Create 1`] = `
<div
  class="view"
>
  <vue-headful-stub
    description=""
    head="[object Object]"
    title="Munro - Create Competitor"
  />
   
  <div>
    <h1
      class="mb-2 text-3xl font-normal text-main font-heading"
    >
      
      Create Competitor
    
    </h1>
     
    <!---->
     
    <form>
      <div
        class="relative text-input top--4"
      >
        <label
          class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
        >
          Name:
        </label>
         
        <input
          class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
          type="text"
        />
      </div>
       
      <div
        class="relative text-input top--4"
      >
        <label
          class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
        >
          Club:
        </label>
         
        <input
          class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
          type="text"
        />
      </div>
       
      <div
        class="relative text-input top--4"
      >
        <label
          class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
        >
          Age Class:
        </label>
         
        <input
          class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
          type="text"
        />
      </div>
       
      <div
        class="relative dropdown-input top--4"
      >
        <label
          class="relative p-1 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
        >
          League:
        </label>
         
        <div
          class="visible w-full px-4 py-2 border outline-none border-main rounded-shape"
        >
          <p
            class="h-6 leading-normal truncate"
          >
            
          </p>
           
          <svg
            class="float-right h-8 fill-current text-main mr--3 mt--68/10"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
            />
             
            <path
              d="M0-.75h24v24H0z"
              fill="none"
            />
          </svg>
        </div>
         
        <div
          class="absolute z-40 w-full mb-2 text-center bg-white border border-t-0 select-none dropdown text-body border-main"
          name="open"
          style="display: none;"
        />
      </div>
       
      <div
        class="relative dropdown-input top--4"
      >
        <label
          class="relative p-1 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
        >
          Course:
        </label>
         
        <div
          class="visible w-full px-4 py-2 border outline-none border-main rounded-shape"
        >
          <p
            class="h-6 leading-normal truncate"
          >
            
          </p>
           
          <svg
            class="float-right h-8 fill-current text-main mr--3 mt--68/10"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
            />
             
            <path
              d="M0-.75h24v24H0z"
              fill="none"
            />
          </svg>
        </div>
         
        <div
          class="absolute z-40 w-full mb-2 text-center bg-white border border-t-0 select-none dropdown text-body border-main"
          name="open"
          style="display: none;"
        />
      </div>
       
      <button
        class="button-lg"
      >
        Create Competitor
      </button>
       
      <!---->
    </form>
  </div>
   
  <!---->
</div>
`;

exports[`Renders Correctly - Upload 1`] = `
<div
  class="view"
>
  <vue-headful-stub
    description=""
    head="[object Object]"
    title="Munro - Edit Competitor"
  />
   
  <div>
    <!---->
     
    <h1
      class="mb-2 text-3xl font-normal text-main font-heading"
    >
      
      Edit Competitor
    
    </h1>
     
    <form>
      <div
        class="relative text-input top--4"
      >
        <label
          class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
        >
          Name:
        </label>
         
        <input
          class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
          type="text"
        />
      </div>
       
      <div
        class="relative text-input top--4"
      >
        <label
          class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
        >
          Club:
        </label>
         
        <input
          class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
          type="text"
        />
      </div>
       
      <div
        class="relative text-input top--4"
      >
        <label
          class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
        >
          Age Class:
        </label>
         
        <input
          class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
          type="text"
        />
      </div>
       
      <div
        class="relative dropdown-input top--4"
      >
        <label
          class="relative p-1 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
        >
          League:
        </label>
         
        <div
          class="visible w-full px-4 py-2 border outline-none border-main rounded-shape"
        >
          <p
            class="h-6 leading-normal truncate"
          >
            
          </p>
           
          <svg
            class="float-right h-8 fill-current text-main mr--3 mt--68/10"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
            />
             
            <path
              d="M0-.75h24v24H0z"
              fill="none"
            />
          </svg>
        </div>
         
        <div
          class="absolute z-40 w-full mb-2 text-center bg-white border border-t-0 select-none dropdown text-body border-main"
          name="open"
          style="display: none;"
        />
      </div>
       
      <div
        class="relative dropdown-input top--4"
      >
        <label
          class="relative p-1 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
        >
          Course:
        </label>
         
        <div
          class="visible w-full px-4 py-2 border outline-none border-main rounded-shape"
        >
          <p
            class="h-6 leading-normal truncate"
          >
            
          </p>
           
          <svg
            class="float-right h-8 fill-current text-main mr--3 mt--68/10"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
            />
             
            <path
              d="M0-.75h24v24H0z"
              fill="none"
            />
          </svg>
        </div>
         
        <div
          class="absolute z-40 w-full mb-2 text-center bg-white border border-t-0 select-none dropdown text-body border-main"
          name="open"
          style="display: none;"
        />
      </div>
       
      <!---->
       
      <button
        class="button-lg"
      >
        Update Competitor
      </button>
    </form>
  </div>
   
  <!---->
</div>
`;
